namespace ExampleTemplate
{
    public static class UnitParametrsManager
    {
        public const string MOVING_SPEED = "MovingSpeed";
        public const string STRAFE = "Strafe";
        public const string JUMP = "Jump";
        public const string DEATH = "Death";
        public const string IMPACT = "Impact";
        public const string AIMING = "Aiming";
        public const string TOSS_GRANADE = "TossGranade";
        public const string PUNCH = "Punch";
    }
}